# rust

./: claude.md  cuda.md  prompt.md  rules.md  rust.md
rustg/: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Dockerfile  INTEGRATION_NOTES.md  Makefile  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_NOTES_v0.2.0.md  build.rs  comprehensive_test.rs  cross_ref_test.rs  docker-compose.yml  install-rustg.sh  large_test.rs  mock-cargo-g.sh  mock-rustg.sh  prepare-crates-io.sh  prompt.md  publish-release.sh  test_format.rs  test_input.rs  uninstall-rustg.sh
rustg/.claude/agents/: rust-systems-engineer.md
rustg/.github/workflows/: release.yml
rustg/benches/: tokenizer_bench.rs
rustg/cargo-g/: Cargo.toml  build.rs
rustg/cargo-g/src/: build.rs  cache.rs  config.rs  gpu.rs  incremental.rs  main.rs
rustg/cargo-g/tests/: gpu_tests.rs
rustg/cargo-g/tests/cuda/: build_config_test.cu  cache_test.cu  gpu_detection_test.cu  performance_test.cu  test_common.cuh
rustg/docs/: PROJECT_COMPLETION_SUMMARY.md
rustg/docs/memory-bank/: MEMORY-BANK-PHASE-7.md  activeContext.md  cuda13-rtx5090-upgrade.md  implementation-summary.md  phase1-debug-profiler.md  phase1-final-completion.md  phase1-gpu-test-harness.md  phase2-completion.md  phase2-cuda-tests-complete.md  phase2-progress.md  phase3-completion.md  phase4-completion.md  phase4-nvidia-fs-integration.md  phase4-planning.md  phase4-progress.md  phase5-completion.md  phase5-planning.md  phase5-progress.md  phase6-completion.md  phase6-cuda13-update.md  phase6-gpu-native-update.md  productContext.md  progress.md  project-completion.md  projectB-overview.md  projectbrief.md  session12-summary.md  session13-summary.md  session4-summary.md  session6-summary.md  session7-summary.md  session9-summary.md  stratoswarm_integration.md  systemPatterns.md  techContext.md
rustg/docs/memory-bank/architecture/: gpu-memory-architecture.md  parallel-algorithms.md  performance-targets.md
rustg/docs/memory-bank/archive/: phase1-completion.md  phase1-summary.md  phase3-planning.md  phase3-progress.md  phase4-completion.md  phase5-completion.md  session10-summary.md  session11-summary.md  session5-summary.md  session8-summary.md
rustg/docs/memory-bank/phases/: current-phase-details.md  implementation-roadmap.md  phase-overview.md
rustg/docs/memory-bank/projectB/: phase1.md  phase10.md  phase2.md  phase8.md
rustg/docs/projectB/: phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase9.md
rustg/gpu-core-libs/: Cargo.toml  build.rs
rustg/gpu-core-libs/src/: collections.rs  crypto.rs  lib.rs  main.rs  text.rs
rustg/gpu-core-libs/tests/cuda/: collections_test.cu  crypto_test.cu  text_processing_test.cu
rustg/gpu-data-engines/: Cargo.toml  MEMORY-BANK-PHASE-6.md  build.rs
rustg/gpu-data-engines/src/: dataframe.rs  graph.rs  lib.rs  main.rs  search.rs  sql.rs  sql_plan.rs  sql_types.rs
rustg/gpu-data-engines/tests/: gpu_only_verification.rs
rustg/gpu-data-engines/tests/cuda/: cuda_init.cu  cuda_safe_api.cu  cuda_safe_api.hpp  dataframe_test.cu  graph_test.cu  minimal_test.cu  search_test.cu  simple_test.cu  sql_test.cu
rustg/gpu-debug-profiler/: CMakeLists.txt  Cargo.toml  README.md
rustg/gpu-debug-profiler/scripts/: build_and_test.sh
rustg/gpu-debug-profiler/src/: cuda_utils.rs  debugger.rs  flamegraph.rs  lib.rs  profiler.rs  source_mapper.rs  timeline.rs
rustg/gpu-debug-profiler/tests/cuda/: profiling_test.cu  source_mapping_test.cu  timeline_tracing_test.cu  warp_debug_test.cu
rustg/gpu-dev-tools/: Cargo.toml  build.rs
rustg/gpu-dev-tools/src/: cuda.rs  formatter.rs  lib.rs  linter.rs  main.rs
rustg/gpu-dev-tools/tests/cuda/: formatter_implementation.cu  formatter_test.cu  linter_test.cu
rustg/gpu-ml-stack/: CMakeLists.txt  Cargo.toml  build.rs
rustg/gpu-ml-stack/src/: autodiff.rs  fusion.rs  layers.rs  lib.rs  tensor.rs  training.rs
rustg/gpu-ml-stack/tests/cuda/: autodiff_test.cu  kernel_fusion_test.cu  nn_layers_test.cu  tensor_core_test.cu  training_test.cu
rustg/gpu-networking/: Cargo.toml  build.rs
rustg/gpu-networking/src/: consensus.rs  lib.rs  main.rs  protocol.rs  rdma.rs  rpc.rs
rustg/gpu-networking/tests/cuda/: consensus_test.cu  protocol_stack_test.cu  rdma_test.cu  rpc_collectives_test.cu
rustg/gpu-runtime-primitives/: Cargo.toml
rustg/gpu-runtime-primitives/src/: allocator.rs  communication.rs  error_handling.rs  lib.rs  main.rs  scheduler.rs
rustg/gpu-runtime-primitives/tests/cuda/: allocator_test.cu  communication_test.cu  error_handling_test.cu  scheduler_test.cu
rustg/gpu-storage/: Cargo.toml  build.rs
rustg/gpu-storage/src/: abstraction.rs  cache.rs  formats.rs  gpudirect.rs  lib.rs  main.rs  nvidia_fs.rs  storage_tiers.rs
rustg/gpu-storage/tests/cuda/: cache_test.cu  format_handlers_test.cu  gpudirect_storage_test.cu  storage_abstraction_test.cu
rustg/gpu-test-harness/: Cargo.toml  build.rs
rustg/gpu-test-harness/src/: assertion.rs  cuda.rs  discovery.rs  executor.rs  golden.rs  lib.rs  main.rs
rustg/gpu-test-harness/tests/cuda/: assertion_test.cu  golden_output_test.cu  parallel_execution_test.cu  (+1 more)
rustg/include/: char_classifier.h  cuda13_features.h  gpu_types.h  nsight_profiling.h
rustg/scripts/: benchmark-performance.sh  run_performance_tests.sh  validate_gpu.sh  verify-installation.sh
rustg/src/: error.rs  gpu_analyzer.rs  lib.rs  lsp_types.rs  main.rs
rustg/src/codegen/: mod.rs
rustg/src/core/: compiler.rs  kernel.rs  memory.rs  memory_pool.rs  mod.rs  telemetry.rs
rustg/src/ffi/: cuda.rs  mod.rs
rustg/src/integration/: phase_integration.cu
rustg/src/lexer/: mod.rs  tokenizer.rs
rustg/src/parser/: mod.rs
rustg/tests/: ast_kernel_test.cu  bindgen_g_test.rs  blackwell_features.cu  clippy_f_test.rs  crate_graph_test.cu  gpu_kernel_test.cu  integration_test.rs  macro_expansion_test.cu  miri_g_test.rs  performance_validation.cu  phase2_integration_test.cu  phase3_integration_test.cu  phase5_codegen_tests.cu  rtx5090_validation.cu  rustdoc_g_test.rs  rustfmt_g_test.rs  rustup_g_test.rs  tokenizer_test.rs
rustg/tests/fixtures/: large.rs  simple.rs
(+39 files in other folders)
