[package]
name = "rustg"
version = "0.1.0"
edition = "2021"
authors = ["rustg developers"]
description = "GPU-native Rust compiler achieving 10x compilation speedup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustg/rustg"
keywords = ["compiler", "gpu", "cuda", "rust", "parallel"]
categories = ["development-tools", "compilers"]

[lib]
name = "rustg"
path = "src/lib.rs"

[[bin]]
name = "rustg"
path = "src/main.rs"

[[bench]]
name = "tokenizer_bench"
harness = false

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FFI and CUDA interop
libc = "0.2"
cuda-sys = "0.2"
cxx = "1.0"

# Memory management
memmap2 = "0.9"
parking_lot = "0.12"

# Data structures
rustc-hash = "1.1"
indexmap = "2.0"
smallvec = "1.11"
bumpalo = "3.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Command line interface
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
pretty_assertions = "1.4"

[dev-dependencies]
tempfile = "3.8"
insta = "1.34"
rstest = "0.18"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.69"
cxx-build = "1.0"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[workspace]
members = [
    ".",
]
resolver = "2"

[features]
default = ["cuda"]
cuda = []
cpu-fallback = []
profiling = []
debug-gpu = []