[workspace]
members = [
    ".",
    "gpu-test-harness",
    "gpu-runtime-primitives",
    "gpu-core-libs",
    "gpu-storage",
    "gpu-networking",
    "gpu-data-engines"
]
resolver = "2"

[package]
name = "rustg"
version = "0.1.0"
edition = "2021"
authors = ["rustg developers"]
description = "GPU-native Rust compiler achieving 10x compilation speedup"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rustg/rustg"
keywords = ["compiler", "gpu", "cuda", "rust", "parallel"]
categories = ["development-tools", "compilers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(blackwell_gpu)'] }

[lib]
name = "rustg"
path = "src/lib.rs"

[[bin]]
name = "rustg"
path = "src/main.rs"

[[bin]]
name = "cargo-g"
path = "src/bin/cargo-g.rs"

[[bin]]
name = "clippy-f"
path = "src/bin/clippy-f.rs"

[[bin]]
name = "rustfmt-g"
path = "src/bin/rustfmt-g.rs"

[[bin]]
name = "rustdoc-g"
path = "src/bin/rustdoc-g.rs"

[[bin]]
name = "rustup-g"
path = "src/bin/rustup-g.rs"

[[bin]]
name = "rust-analyzer-g"
path = "src/bin/rust-analyzer-g.rs"

[[bin]]
name = "rust-gdb-g"
path = "src/bin/rust-gdb-g.rs"

[[bench]]
name = "tokenizer_bench"
harness = false

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FFI and CUDA interop
libc = "0.2"
cuda-sys = "0.2"
cxx = "1.0"

# Memory management
memmap2 = "0.9"
parking_lot = "0.12"

# Data structures
rustc-hash = "1.1"
indexmap = "2.0"
smallvec = "1.11"
bumpalo = "3.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Command line interface
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"

# Dependencies for gpu-dev-tools integration
gpu-dev-tools = { path = "gpu-dev-tools" }

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
pretty_assertions = "1.4"

[dev-dependencies]
tempfile = "3.8"
insta = "1.34"
rstest = "0.18"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.69"
cxx-build = "1.0"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

# Workspace already defined at top of file

[features]
default = ["cuda"]
cuda = []
cpu-fallback = []
profiling = []
debug-gpu = []