[package]
name = "gpu-debug-profiler"
version = "0.1.0"
edition = "2021"
authors = ["rustg Team"]
description = "GPU debug and profiling infrastructure for rustg ecosystem"
license = "MIT"

[dependencies]
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
nvml-wrapper = "0.9"
cupti = "0.1"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crossbeam = "0.8"
dashmap = "5.0"
rayon = "1.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
flame = "0.2"
inferno = "0.11"
capstone = "0.11"
goblin = "0.7"
gimli = "0.28"
object = "0.32"
addr2line = "0.21"

[build-dependencies]
cc = "1.0"
bindgen = "0.68"
walkdir = "2.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[[bin]]
name = "gpu-profiler"
path = "src/bin/profiler.rs"

[[bin]]
name = "gpu-debugger"
path = "src/bin/debugger.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Keep debug info for profiling

[features]
default = ["gpu-acceleration", "timeline-tracing"]
gpu-acceleration = []
timeline-tracing = []
warp-debugging = []
flamegraph = []
source-mapping = []