[package]
name = "gpu-ml-stack"
version = "1.0.0"
edition = "2021"
authors = ["rustg team"]

[dependencies]
# Core dependencies
libc = "0.2"
once_cell = "1.19"

# Math and tensor operations
num-traits = "0.2"
ndarray = "0.15"
half = "2.3"  # For FP16 support

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
cc = "1.0"

[lib]
name = "gpu_ml_stack"
path = "src/lib.rs"

[[bin]]
name = "gpu-ml-stack"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = []
tensor-cores = []
mixed-precision = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true