[package]
name = "gpu-networking"
version = "1.0.0"
edition = "2021"
authors = ["rustg team"]
description = "GPU-Native Networking Stack for rustg"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
bytes = "1.0"
memmap2 = "0.9"
parking_lot = "0.12"
crossbeam = "0.8"
ahash = "0.8"
futures = "0.3"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = "4.5"
rayon = "1.10"
rand = "0.8"

[build-dependencies]
cc = "1.0"

[lib]
name = "gpu_networking"
path = "src/lib.rs"

[[bin]]
name = "gpu-networking"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3