[package]
name = "gpu-runtime-primitives"
version = "1.0.0"
edition = "2021"
authors = ["rustg team"]
description = "GPU-Native Runtime Primitives for rustg"

[dependencies]
clap = "4.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"

[build-dependencies]
cc = "1.0"

[lib]
name = "gpu_runtime_primitives"
path = "src/lib.rs"

[[bin]]
name = "gpu-runtime"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3