[package]
name = "gpu-test-harness"
version = "0.1.0"
edition = "2021"
authors = ["rustg Team"]
description = "GPU-native testing framework for rustg ecosystem"
license = "MIT"

[dependencies]
cudarc = { version = "0.17.2", features = ["driver", "runtime", "cuda-13000"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
rayon = "1.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
walkdir = "2.3"
regex = "1.5"
tempfile = "3.0"
dashmap = "5.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.68"
walkdir = "2.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

# Benchmarks not yet implemented
# [[bench]]
# name = "gpu_test_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["gpu-acceleration"]
gpu-acceleration = []
multi-gpu = []
golden-validation = []
performance-tracking = []